force-app/main/default/objects/QuoteLineItem/fields/Is_Synced_Quote_line2__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_Quote_line2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced Quote (line)2</label>
    <type>Checkbox</type>
</CustomField>