force-app/main/default/objects/QuoteLineItem/fields/Is_Synced_Quote_line__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_Quote_line__c</fullName>
    <formula>Quote.IsSyncing</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Synced Quote (line)</label>
    <type>Checkbox</type>
</CustomField>