force-app/main/default/objects/QuoteLineItem/fields/OEM_Discount2__c.field-meta.xml
<CustomField>
    <fullName>OEM_Discount2__c</fullName>
    <formula>IF(ISPICKVAL(Product2.Family, &quot;100 - UF&quot;), Quote.Opportunity.Account.Discount_OEM__c,
IF(ISPICKVAL(Product2.Family, &quot;101 - NF&quot;), Quote.Opportunity.Account.Discount_OEM__c,
IF(ISPICKVAL(Product2.Family, &quot;102 - MF&quot;), Quote.Opportunity.Account.Discount_OEM__c, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>