force-app/main/default/objects/QuoteLineItem/fields/OEM_Discount_Quotetemplate__c.field-meta.xml
<CustomField>
    <fullName>OEM_Discount_Quotetemplate__c</fullName>
    <formula>OEM_Discount2__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Discount (helper)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>