force-app/main/default/objects/QuoteLineItem/fields/OEM_Discount_Quotetemplatex__c.field-meta.xml
<CustomField>
    <fullName>OEM_Discount_Quotetemplatex__c</fullName>
    <formula>TEXT(OEM_Discount_Quotetemplate__c ) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Discount</label>
    <type>Text</type>
</CustomField>