force-app/main/default/objects/QuoteLineItem/fields/Previous_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Line_Item_ID__c</fullName>
    <label>Previous Line Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>