force-app/main/default/objects/QuoteLineItem/fields/Roll_up_TEXT_for_shipping_cost_product_2__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_TEXT_for_shipping_cost_product_2__c</fullName>
    <label>Roll up for shipping cost product 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>