force-app/main/default/objects/QuoteLineItem/fields/Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales Discount</label>
    <precision>11</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>