force-app/main/default/objects/QuoteLineItem/fields/Sales_Discount_Helper__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount_Helper__c</fullName>
    <formula>ROUND(Sales_Discount__c * 100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Discount (DO NOT USE - Helper)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>