force-app/main/default/objects/QuoteLineItem/fields/Sales_Discount_Quotetemplate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount_Quotetemplate__c</fullName>
    <formula>TEXT(  Sales_Discount_Helper__c  ) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Discount</label>
    <type>Text</type>
</CustomField>