force-app/main/default/objects/QuoteLineItem/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <formula>(PricebookEntry.UnitPrice) * (1- Total_Discount__c ) +  Transport_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>