force-app/main/default/objects/QuoteLineItem/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>(Sales_Price__c * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>