force-app/main/default/objects/QuoteLineItem/fields/Subtotal_Salesprice_Discount_for_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Salesprice_Discount_for_Roll_Up__c</fullName>
    <label>Subtotal for Roll Up</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>