force-app/main/default/objects/QuoteLineItem/fields/Volume_Discount_Helper__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount_Helper__c</fullName>
    <formula>Volume_Discount__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Discount Helper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>