force-app/main/default/objects/QuoteLineItem/fields/Volume_Discount_quotetemplate__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount_quotetemplate__c</fullName>
    <formula>TEXT(Volume_Discount_Helper__c) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Discount</label>
    <type>Text</type>
</CustomField>