force-app/main/default/objects/QuoteLineItem/validationRules/Cannot_add_more_then_1_quantity_shipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_add_more_then_1_quantity_shipping</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Product2.Family, &quot;105 - Shipping&quot;),
Quantity &gt; 1
)</errorConditionFormula>
    <errorMessage>You cannot add more then 1 quantity for shipping line</errorMessage>
</ValidationRule>