force-app/main/default/objects/QuoteLineItem/validationRules/Cannot_add_Sales_Discount_for_shipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_add_Sales_Discount_for_shipping</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Product2.Family, &quot;105 - Shipping&quot;),
Sales_Discount__c &gt; 0
)</errorConditionFormula>
    <errorMessage>You cannot add Sales Discount for shipping cost / transport cost</errorMessage>
</ValidationRule>