force-app/main/default/objects/QuoteLineItem/validationRules/Cannot_exceed_100perc_salesdiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_exceed_100perc_salesdiscount</fullName>
    <active>true</active>
    <description>You cannot give more than 100% sales discount</description>
    <errorConditionFormula>Sales_Discount__c &gt; 1</errorConditionFormula>
    <errorMessage>You cannot give more than 100% sales discount</errorMessage>
</ValidationRule>