force-app/main/default/objects/QuoteLineItem/validationRules/You_cannot_add_shipping_cost_line.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_add_shipping_cost_line</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

$Permission.Permission_to_add_Shipping_cost = false &amp;&amp;

OR(

ISPICKVAL( PricebookEntry.Product2.Family, &quot;105 - Shipping&quot;)

 )

)</errorConditionFormula>
    <errorMessage>You do not have the permission to add shipping cost on Quote Line Items.</errorMessage>
</ValidationRule>