force-app/main/default/objects/QuoteLineItem/validationRules/You_cannot_add_transport_cost.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_add_transport_cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Transport_Cost__c),

NOT(ISPICKVAL(PricebookEntry.Product2.Family, &quot;105 - Shipping&quot;))

)</errorConditionFormula>
    <errorMessage>You can only add transport cost on the Product Family &quot;Shipping&quot;</errorMessage>
</ValidationRule>